--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -10,7 +10,7 @@
                     <div class="logo">Header Logo</div>
                     <div class="link left">header link one</div>
                     <div class="link">header link two</div>
-                    <div class="link">header link three</div>
+                    <div class="link three">header link three</div>
                 </div>
                 <div class="mid">
                     <div class="west">
