Finished website. All 5 sections

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <title>Placeholder</title>
+            <title>Landing Page</title>
             <link rel="stylesheet" href="style.css">
         </head>
         <body>
             <div class="first">
                 <div class="header">
-                    <div class="logo">Header Logo</div>
-                    <div class="link left">header link one</div>
-                    <div class="link">header link two</div>
-                    <div class="link three">header link three</div>
+                    <div class="logo">Tofu Cafe</div>
+                    <div class="link left">About</div>
+                    <div class="link">Login</div>
+                    <div class="link three">Store</div>
                 </div>
                 <div class="mid">
                     <div class="west">
@@ -22,9 +22,51 @@
                             <button>Sign up</button>
                         </div>
                     </div>    
-                    <div class="east">this is a place holder for an image</div>       
+                    <div> <img id="omega" src="https://images.pexels.com/photos/414612/pexels-photo-414612.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="A bridge"></div>       
+                </div>
             </div>
-
+            <div class="second">
+                <div class="secondtext">Some random information.</div>
+                <div class="secondpic">
+                        <div class="one">   
+                            <div> <img class="hi" src="https://images.pexels.com/photos/4518607/pexels-photo-4518607.jpeg?cs=srgb&dl=pexels-polina-tankilevitch-4518607.jpg&fm=jpg" alt="tofu"></div>
+                            <div class="words">Delicious Tofu that is fried and looks like drizzled in soy sauce</div>
+                        </div>  
+                        <div class="one">   
+                            <div> <img class="hi" src="https://images.pexels.com/photos/2132942/pexels-photo-2132942.png?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="mapo tofu"></div>
+                            <div class="words">Spicy Ass Mapo Tofu. Probably? The color looks right but I do not see any tofu inside. I think the text will stay centered like this.</div>
+                        </div>  
+                        <div class="one">   
+                            <div> <img class="hi" src="https://images.pexels.com/photos/4518585/pexels-photo-4518585.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="soy milk"></div>
+                            <div class="words">Soy Milk. Weird taste.</div>
+                        </div>  
+                        <div class="one">   
+                            <div> <img class="hi" src="https://images.pexels.com/photos/273838/pexels-photo-273838.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="soy beans"> </div>
+                            <div class="words">Everything came from this. The genesis bean.</div>
+                        </div>    
+                </div>
+            </div>
+            <div class="third">
+                <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's 
+                    just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. 
+                </div>
+                <div class="sig">-Thor, God of Thunder</div>
+            </div>  
+            <div class="fourth">
+                <div class="button2">
+                    <div class="organize">
+                        <div class="call">Call to action! It's time! </div>
+                            
+                        <div class="call2">Sign up for our products by clicking that button right over there!</div>
+                    </div>
+                    <div><button class="button3">Sign Up</button></div>
+                </div>
+            </div>
+            <div class="fifth">
+                <div class="footer">
+                    Copyright © The Odin Project 2021
+                </div>
+            </div>
         </body>
 
     </html>
